--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+machine:
+  java:
+    version: oraclejdk8
+
 ## Customize test commands
 test:
   post:
@@ -6,3 +10,17 @@ test:
 general:
   artifacts:
     - target/kinneret-server-1.0-SNAPSHOT.jar
+deployment:
+  staging:
+    branch: master
+    codedeploy:
+      doc_elena_cdapp_server:
+        application_root: /
+        region: us-west-2
+        revision_location:
+          revision_type: S3
+          s3_location:
+            bucket: doc-elena-code-deploy
+            key_pattern: kinneret-server/kinneret-server-{BRANCH}-{SHORT_COMMIT}
+        deployment_group: doc_elena_depgroup
+
